[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: AntiqueWhite;
     margin-top: 75px;
 }
 
@@ -25,6 +25,6 @@ body {
     text-align: left;
     font-weight:bold;
     font-family: sans-serif;
-    color: chocolate;
+    color: Chocolate;
 }
 
