[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -24,7 +24,7 @@ body {
 .head{
     text-align: left;
     font-weight:bold;
-    font-family: Georgia;
+    font : Arizonia;
     color: Chocolate;
    
 }
