--- a/ui/style.css
+++ b/ui/style.css
@@ -30,7 +30,7 @@ body {
     text-align: left;
     font-weight:bold;
      font: 400 10px/1.3 'Arizonia', Helvetica, sans-serif;
-     color: #2b2b2b;
+     color: rgb(121,149,117);
      text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
 
