--- a/ui/style.css
+++ b/ui/style.css
@@ -22,15 +22,15 @@ body {
 }
 .obj1{
     text-align: center;
-     font: 400 50px/0.8 'Great Vibes', Helvetica, sans-serif;
-     color: #fff;
+     font: 400 10px/0.8 'Great Vibes', Helvetica, sans-serif;
+     color: #2b2b2b;
     text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
 }
 .head{
     text-align: left;
     font-weight:bold;
-     font: 400 10px/1.3 'Arizonia', Helvetica, sans-serif;
-     color: rgb(121,149,117);
+     font: 400 50px/1.3 'Arizonia', Helvetica, sans-serif;
+     color: #2b2b2b;
      text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
 
